# ProjectEulerInRust

./: Cargo.toml  README.md
id_under_50/id_1_multiples_of_3_or_5/src/: lib.rs
id_under_50/id_2_even_fibonacci_numbers/src/: lib.rs
id_under_50/id_3_largest_prime_factor/: Cargo.toml
id_under_50/id_3_largest_prime_factor/src/: lib.rs
id_under_50/id_4_largest_palindrome_product/: Cargo.toml
id_under_50/id_4_largest_palindrome_product/src/: lib.rs
id_under_50/id_5_smallest_multiple/: Cargo.toml
id_under_50/id_5_smallest_multiple/src/: lib.rs
id_under_50/id_8_largest_product_in_a_series/: Cargo.toml
id_under_50/id_8_largest_product_in_a_series/src/: lib.rs
src/: main.rs
utils/src/: lib.rs
